agregando verificacion google

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/logo_fitosana.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--<meta name="google-site-verification" content="ygHTm9HN7HAfSo_LwmOEyVaqwIxXTt-LVXiYTN-kSas" />-->
+    <meta name="google-site-verification" content="ygHTm9HN7HAfSo_LwmOEyVaqwIxXTt-LVXiYTN-kSas" />
     <meta name="description" content="Medicina Natural y Salud. Tienda Online con envío gratis a todo el país.">
     <title>Tienda Oficial</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">    
